unit text fixes
